去掉gcc编译选项：-O和Werror

--- a/objs/Makefile
+++ b/objs/Makefile
@@ -1,6 +1,6 @@
 
 CC =	gcc
-CFLAGS =  -pipe  -O -W -Wall -Wpointer-arith -Wno-unused-parameter -Wunused-function -Wunused-variable -Wunused-value -Werror -g 
+CFLAGS =  -pipe  -Wall -Wpointer-arith -Wno-unused-parameter -Wunused-function -Wunused-variable -Wunused-value -g 
 CPP =	gcc -E
 LINK =	$(CC)
 
